sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 169 66 xxx
simstep 6 1
